<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="Bill Number"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="15dp"
            android:id="@+id/home_tv_bno"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="Bill Number"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollView2"
        android:background="#efefef"
        android:layout_marginTop="54dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/home_btn_select_date"
                    android:text="Select Date"/>
                <TextView
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:id="@+id/home_et_date"
                    android:layout_height="match_parent"
                    android:hint="DD/MM/YYYY"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:hint="Shop Details"/>
                    <Button
                        android:id="@+id/home_btn_search_shop"
                        android:layout_margin="6dp"
                        android:padding="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Search Shop"/>
                    <AutoCompleteTextView
                        android:background="@drawable/bg_item_autoet"
                        android:padding="15dp"
                        android:textSize="18dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_margin="6dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/shopName"
                        android:id="@+id/home_autocomplete"
                        android:inputType="text" />
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_margin="6dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/shopkeeperName">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/home_et_name"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_margin="6dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile1">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/home_et_mobile1"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_margin="6dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile2">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/home_et_mobile2"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_margin="6dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile3">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/home_et_mobile3"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_margin="6dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/landmark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/home_et_landmark"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="2dp"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:hint="Item Details"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:id="@+id/home_rv_items"/>
                    <Button
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:id="@+id/home_btn_add"
                        android:text="@string/addItem"
                        android:layout_marginBottom="12dp"
                        app:icon="@drawable/icon_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout

                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ProgressBar
                    android:indeterminateTint="@color/colorPrimary"
                    android:layout_width="54dp"
                    android:id="@+id/home_progress_pdf"
                    android:layout_height="54dp"/>
                <TextView
                    android:id="@+id/home_tv_pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100% Complete"/>
            </LinearLayout>
            <Button
                android:id="@+id/home_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textStyle="bold"
                android:text="बिल जोड़ें"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>